force-app/main/default/objects/SOP_Article_Type__kav/fields/Legacy_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source_ID__c</fullName>
    <label>Legacy Source ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>