force-app/main/default/objects/SOP_Article_Type__kav/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <label>Metadata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>